--- a/templates/admin_items.html
+++ b/templates/admin_items.html
@@ -40,27 +40,27 @@
                 </div>
                 <div class="modal-body">
                   <!-- Your form fields go here -->
-                  <form id="addItemForm" method="POST">
+                  <form id="addItemForm" method="POST" action="{% url 'adminitems' %}">
                     {% csrf_token %}
                     <div class="mb-3">
-                      <label for="itemName" class="form-label">Item Name</label>
-                      <input type="text" class="form-control" id="itemName" name="itemName" />
+                      <label for="item_name" class="form-label">Item Name</label>
+                      <input type="text" class="form-control" id="item_name" name="item_name" />
                     </div>
                     <div class="mb-3">
-                      <label for="itemDesc" class="form-label">Item Description</label>
-                      <textarea class="form-control" name="itemDesc" id="itemDesc" rows="5"></textarea>
+                      <label for="item_desc" class="form-label">Item Description</label>
+                      <textarea class="form-control" name="item_desc" id="item_desc" rows="5"></textarea>
                     </div>
                     <div class="mb-3">
-                      <label for="itemType" class="form-label">Item Type</label>
-                      <select class="form-select" id="itemType" name="itemType">
+                      <label for="item_type" class="form-label">Item Type</label>
+                      <select class="form-select" id="item_type" name="item_type">
                         <option value="Breakfast">Breakfast</option>
                         <option value="Lunch">Lunch</option>
                         <option value="Dinner">Dinner</option>
                       </select>
                     </div>
                     <div class="mb-3">
-                      <label for="itemPrice" class="form-label">Item price</label>
-                      <input type="number" class="form-control" id="itemPrice" name="itemPrice" />
+                      <label for="item_price" class="form-label">Item price</label>
+                      <input type="number" class="form-control" id="item_price" name="item_price" />
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                   </form>
@@ -97,9 +97,6 @@
                     <th>
                       <span class="d-flex align-items-center justify-content-center">Actions</span>
                     </th>
-                    {% comment %}
-                    <th>Item Image</th>
-                    {% endcomment %}
                   </tr>
                 </thead>
                 <tbody>
@@ -130,33 +127,38 @@
                               </div>
 
                               <div class="modal-body">
-                                <form id="editItemForm{{item.id}}" method="POST">
+                                <form id="editItemForm{{item.id}}" method="POST" action="{% url 'adminitems-edit' item.id %}">
                                   {% csrf_token %}
 
                                   <div class="mb-3">
-                                    <label for="itemName" class="form-label">Item Name</label>
-                                    <input value="{{item.item_name}}" type="text" class="form-control" id="itemName" name="itemName" />
+                                    <label for="item_name" class="form-label">Item Name</label>
+                                    <input value="{{item.item_name}}" type="text" class="form-control" id="item_name"
+                                      name="item_name" />
                                   </div>
 
                                   <div class="mb-3">
-                                    <label for="itemDesc" class="form-label">Item Description</label>
-                                    <textarea class="form-control" name="itemDesc" id="itemDesc" rows="5"></textarea>
+                                    <label for="item_desc" class="form-label">Item Description</label>
+                                    <textarea class="form-control" name="item_desc" id="item_desc" rows="5"></textarea>
                                   </div>
 
                                   <div class="mb-3">
-                                    <label for="itemType" class="form-label">Item Type</label>
-                                    <select  class="form-select" id="itemType" name="itemType">
-                                      <option value="Breakfast" {% if item.item_type == "Breakfast" %} selected {% endif %}>Breakfast</option>
-                                      <option value="Lunch" {% if item.item_type == "Lunch" %} selected {% endif %}>Lunch</option>
-                                      <option value="Dinner" {% if item.item_type == "Dinner" %} selected {% endif %}>Dinner</option>
+                                    <label for="item_type" class="form-label">Item Type</label>
+                                    <select class="form-select" id="item_type" name="item_type">
+                                      <option value="Breakfast">
+                                        Breakfast</option>
+                                      <option value="Lunch">Lunch
+                                      </option>
+                                      <option value="Dinner">
+                                        Dinner
+                                      </option>
                                     </select>
                                   </div>
 
                                   <div class="mb-3">
-                                    <label for="itemPrice" class="form-label">Item price</label>
-                                    <input value="{{item.item_price}}" type="number" class="form-control" id="itemPrice" name="itemPrice" />
+                                    <label for="item_price" class="form-label">Item price</label>
+                                    <input value="{{item.item_price}}" type="number" class="form-control" id="item_price"
+                                      name="item_price" />
                                   </div>
-                                 
                                   <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
                               </div>
@@ -165,15 +167,16 @@
                         </div>
                         <!-- Edit item Modal end -->
 
-                        <button data-bs-toggle="modal" data-bs-target="#deleteItemModal"
+                        <button data-bs-toggle="modal" data-bs-target="#deleteItemModal{{item.id}}"
                           class="btn btn-danger btn-sm">Delete</button>
+
                         <!-- delete item Modal start -->
-                        <div class="modal fade" id="deleteItemModal" tabindex="-1" role="dialog"
-                          aria-labelledby="deleteItemModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="deleteItemModal{{item.id}}" tabindex="-1" role="dialog"
+                          aria-labelledby="deleteItemModal{{item.id}}Label" aria-hidden="true">
                           <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title  " id="deleteItemModalLabel">
+                                <h5 class="modal-title  " id="deleteItemModal{{item.id}}Label">
                                   Delete Item
                                 </h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
@@ -185,9 +188,11 @@
                                   <h5 for="itemName" class="form-label">Are you sure ? Do you want to delete ?</h5>
                                 </div>
                                 <div class="text-center ">
-                                  <button type="submit" class="btn btn-danger">
-                                    Delete
-                                  </button>
+                                  <form id="deleteItemModal{{item.id}}Label" method="POST" action="{% url 'adminitems-delete' item.id %}" >
+                                    <button type="submit" class="btn btn-danger">
+                                      Delete
+                                    </button>
+                                  </form>
                                 </div>
                               </div>
                             </div>
@@ -219,6 +224,7 @@
         </div>
       </footer>
     </div>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
