--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -27,11 +27,11 @@
                             <li><a class="lgx-scroll" href="#lgx-menu">Menu</a></li>
                             <li><a class="lgx-scroll" href="#lgx-news">News</a></li>
                             <li><a class="lgx-scroll btn lgx-btn" href="#lgx-reservation"><span>Reservation</span></a></li>
-                            <li><a class="lgx-scroll btn lgx-btn" href="#lgx-reservation"><span>LOGIN</span></a></li>
+                            <li><a class="lgx-scroll btn lgx-btn" href="login"><span>LOGIN</span></a></li>
                         </ul>
                         <div class="lgx-nav-right">
                             <div class="lgx-cart-area">
-                                <a class="lgx-cart" href="#">
+                                <a class="lgx-cart" href="user-cart">
                                     <img src="{% static 'assets/img/cart-icon-olive.png'%}" alt="cart">
                                     <span class="notification">0</span>
                                 </a>
