--- a/templates/includes/admin_sidenav.html
+++ b/templates/includes/admin_sidenav.html
@@ -4,7 +4,7 @@
     <div class="sb-sidenav-menu">
       <div class="nav">
         <div class="sb-sidenav-menu-heading">Management</div>
-        <a class="nav-link" href="{% url 'adminhome' %}">
+        <a class="nav-link" href="{% url 'adminOrders' %}">
           <div class="sb-nav-link-icon">
             <i class="fas fa-tachometer-alt"></i>
           </div>
