--- a/templates/includes/admin_sidenav.html
+++ b/templates/includes/admin_sidenav.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div id="layoutSidenav_nav">
+<!-- <div id="layoutSidenav_nav">
   <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
     <div class="sb-sidenav-menu">
       <div class="nav">
@@ -29,4 +29,4 @@
       Super Admin
     </div>
   </nav>
-</div>
+</div> -->
