--- a/static/assets/login_css/login.css
+++ b/static/assets/login_css/login.css
@@ -51,9 +51,14 @@ form{
 	padding: 1em .5em .5em;
 	padding-left: 2em;
 	outline:none;
-	margin:1.5em auto;
 	transition: all .5s ease;
+	margin: 10px auto;
 }
+	
+.signup_input{
+	margin: 5px auto;
+}	
+
 .form__input:focus{
 	border-bottom-color: #008080;
 	box-shadow: 0 0 5px rgba(0,80,80,.4); 
