--- a/static/assets/user_cart_css/user-cart.css
+++ b/static/assets/user_cart_css/user-cart.css
@@ -25,7 +25,7 @@ select.form-control {
     border-radius: 22px;
     background-color: #fff;
     color: #606975;
-    font-family: "Maven Pro",Helvetica,Arial,sans-serif;
+    /* font-family: "Maven Pro",Helvetica,Arial,sans-serif; */
     font-size: 14px;
     -webkit-appearance: none;
     -moz-appearance: none;
