--- a/templates/admin_items.html
+++ b/templates/admin_items.html
@@ -18,7 +18,41 @@
   {% include 'includes/admin_header.html' %}
 
   <div id="layoutSidenav">
-    {% include 'includes/admin_sidenav.html' %}
+    <!-- {% include 'includes/admin_sidenav.html' %} -->
+
+     <!-- Sidenav -->
+     <div id="layoutSidenav_nav">
+      <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+          <div class="sb-sidenav-menu">
+              <div class="nav">
+                  <div class="sb-sidenav-menu-heading">Management</div>
+                  <a class="nav-link" href="{% url 'adminOrders' %}">
+                      <div class="sb-nav-link-icon">
+                          <i class="fas fa-tachometer-alt"></i>
+                      </div>
+                      Orders
+                  </a>
+                  <a class="nav-link" href="{% url 'adminreserv' %}">
+                      <div class="sb-nav-link-icon">
+                          <i class="fas fa-tachometer-alt"></i>
+                      </div>
+                      Reservations
+                  </a>
+                  <a class="nav-link" href="{% url 'adminitems' %}">
+                      <div class="sb-nav-link-icon">
+                          <i class="fas fa-tachometer-alt"></i>
+                      </div>
+                      Items
+                  </a>
+              </div>
+          </div>
+          <div class="sb-sidenav-footer">
+              <div class="small">Logged in as:</div>
+              Super Admin
+          </div>
+      </nav>
+  </div>
+  <!-- Sidenav end -->
 
     <div id="layoutSidenav_content">
       <main>
