--- a/templates/signup.html
+++ b/templates/signup.html
@@ -81,17 +81,32 @@
 			<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
 				<div class="container-fluid">
 					<div class="row">
-						<h2>Log In</h2>
+						<h2>Sign up</h2>
 					</div>
 					<div class="row">
-						<form  class="form-group" method="POST", action="{% url 'login' %}">
+						<form  class="form-group" method="POST", action="{% url 'signup' %}">
                             {% csrf_token %}
 							<div class="row">
-								<input type="text" name="username" id="username" class="form__input" placeholder="Username">
+								<input type="text" name="first_name" id="first_name" class="form__input signup_input" placeholder="Enter First Name">
+							</div>
+                            <div class="row">
+								<input type="text" name="last_name" id="last_name" class="form__input signup_input" placeholder="Enter Last Name">
+							</div>
+                            <div class="row">
+								<!-- <span class="fa fa-lock"></span> -->
+								<input type="email" name="email" id="email" class="form__input signup_input" placeholder="Enter Email Id">
+							</div>
+                            <div class="row">
+								<!-- <span class="fa fa-lock"></span> -->
+								<input maxlength="10" type="tel" name="mobile" id="mobile" class="form__input signup_input" placeholder="Enter Mobile no.">
 							</div>
 							<div class="row">
 								<!-- <span class="fa fa-lock"></span> -->
-								<input type="password" name="password" id="password" class="form__input" placeholder="Password">
+								<input type="password" name="password" id="password" class="form__input signup_input" placeholder="Password">
+							</div>
+                            <div class="row">
+								<!-- <span class="fa fa-lock"></span> -->
+								<input type="conpassword" name="conpassword" id="conpassword" class="form__input signup_input" placeholder="Confirm Password">
 							</div>
 							<!-- <div class="row">
 								<input type="checkbox" name="remember_me" id="remember_me" class="">
@@ -103,7 +118,7 @@
 						</form>
 					</div>
 					<div class="row">
-						<p>Don't have an account? <a href="signup">Register Here</a></p>
+						<p>Already have an account? <a href="login">Login Here</a></p>
 					</div>
 				</div>
 			</div>
