--- a/templates/admin_items.html
+++ b/templates/admin_items.html
@@ -238,6 +238,7 @@
                                 <div class="text-center ">
                                   <form id="deleteItemModal{{item.id}}Label" method="POST"
                                     action="{% url 'adminitems-delete' item.id %}">
+                                    {% csrf_token %}
                                     <button type="submit" class="btn btn-danger">
                                       Delete
                                     </button>
